--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,5 @@ pip-log.txt
 /CSE_219/nbproject/private/
 /MyLib/nbproject/private/
 /AnagramGame/nbproject/private/
+/Deadlock/nbproject/private/
+/Gallery/nbproject/private/
