Performing Code Analysis

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,4 @@ pip-log.txt
 /AnagramGame/nbproject/private/
 /Deadlock/nbproject/private/
 /Gallery/nbproject/private/
+/library/library/nbproject/private/
