--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ pip-log.txt
 /Deadlock/nbproject/private/
 /Gallery/nbproject/private/
 /library/library/nbproject/private/
+/HelloWorld/nbproject/private/
