--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,4 @@ pip-log.txt
 /SixDegreesOfKevinBacon/nbproject/private/
 /PropertiesManager/nbproject/private/
 /KevinBaconGameDataViewer/nbproject/private/
+/PathX/nbproject/private/
